--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <![endif]-->
   </head>
   <body>
-    <h1>rho health welcomes you!</h1>
+    <div align=center><img src="img/rhohealth_logo.png"> <br></div>
+	<h1 align=center> welcomes you</h2>
+	
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
