--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
 <div class="navbar navbar-fixed-top alt" data-spy="affix" data-offset-top="1000">
   <div class="container">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Home</a>
+      <a href="#" class="navbar-brand">Start</a>
       <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="icon-bar"></span>
+<!--        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
+-->
+		</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar">
       <ul class="nav navbar-nav">
-        <li><a href="#sec1">Section 1</a></li>
-        <li><a href="#sec2">Section 2</a></li>
-
+        <li><a href="#sec1"><font size="1px">(</font><font size="4px">&#9076;</font><font size="1px">)</font></a></li>
+        <li><a href="#sec2">Health</a></li>
+<!--		<li><a href="#sec3">Section 3</a></li> 
+-->
       </ul>
     </div>
    </div>
@@ -60,47 +62,47 @@
     </div>
   </div>
 </div>
-<!-- 
+
 <div class="featurette" id="sec2">
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <h1>Amazing Features</h1>
+        <h1>Health Features</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-md-2 col-md-offset-2 text-center">
         <div class="featurette-item">
           <i class="icon-rocket"></i>
-          <h4>Rocket</h4>
-          <p>Up-up-and-away with this starter template.</p>
+          <h4>Research</h4>
+          <p>Implicit Information</p>
         </div>
       </div>
       <div class="col-md-2 text-center">
         <div class="featurette-item">
           <i class="icon-magnet"></i>
-          <h4>Magnet</h4>
-          <p>For you are a magnet and I am steel.</p>
+          <h4>Baseline</h4>
+          <p>Quality of the data</p>
         </div>
       </div>
       <div class="col-md-2 text-center">
         <div class="featurette-item">
           <i class="icon-shield"></i>
-          <h4>Shield</h4>
-          <p>Protect yourself. Don't design like it's 1999.</p>
+          <h4>protect</h4>
+          <p>Keep safe from harm</p>
         </div>
       </div>
       <div class="col-md-2 text-center">
         <div class="featurette-item">
           <i class="icon-pencil"></i>
-          <h4>Scholar</h4>
-          <p>Because lead pencils are pretty smart looking.</p>
+          <h4>enhance</h4>
+          <p>Predictive Modeling</p>
         </div>
       </div>
     </div>
   </div>
 </div>
-
+<!-- 
 <div class="callout" id="sec3">
   <div class="vert">
     <div class="col-md-12 text-center"><h2>Random People With Smiles</h2></div>
@@ -296,7 +298,7 @@
           <li><i class="icon-pinterest icon-2x"></i></li>
         </ul>
         <hr>
-        <p>power <i class="icon-heart-empty"></i> by <a href="http://www.bootply.com">(&#9076;)health, llc ©2015</a></p>
+        <p><i class="icon-heart-empty"></i><a href="http://www.rhohealth.com">(&#9076;)health, llc ©2015</a></p>
       </div>
     </div>
   </div>
