update (p) and logo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	</head>
 	<body>
 
+	<p> &#961; </p>
+
 <div class="navbar navbar-fixed-top alt" data-spy="affix" data-offset-top="1000">
   <div class="container">
     <div class="navbar-header">
@@ -28,7 +30,7 @@
     </div>
     <div class="navbar-collapse collapse" id="navbar">
       <ul class="nav navbar-nav">
-        <li><a href="#sec1"><font size="1px">(</font><font size="4px">&#9076;</font><font size="1px">)</font></a></li>
+        <li><a href="#sec1"></font><font size="4px">&#9076;</font></a></li>
         <li><a href="#sec2">Health</a></li>
 <!--		<li><a href="#sec3">Section 3</a></li> 
 -->
@@ -38,8 +40,8 @@
 </div>
 
 <div class="header alt vert">
-  <div class="container">
-    <img src="img/rhohealth_logo.png">
+  <div class="container"><br>
+    <img src="img/rhohealth_logo.png" align-justify=center>
      <div>&nbsp;</div>
       <p class="lead">Welcome</p>
       <div>&nbsp;</div>
@@ -298,7 +300,7 @@
           <li><i class="icon-pinterest icon-2x"></i></li>
         </ul>
         <hr>
-        <p><i class="icon-heart-empty"></i><a href="http://www.rhohealth.com">(&#9076;)health, llc ©2015</a></p>
+        <p><i class="icon-heart-empty"></i><a href="http://www.rhohealth.com">(&#961;)health, llc ©2015</a></p>
       </div>
     </div>
   </div>
